# luna-lone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
assets/images/icons/: luna-lone-icon.xcf
assets/images/misc/: luna-lone-icon.xcf
data/db/schema/: database.sql
icons/dark/: index.theme
icons/light/: index.theme
include/luna-lone/: AudioItemWidget.h  AudioPlayer.h  DataTypes.h  Database.h  MainWindow.h  TagAssignmentDialog.h  TagChip.h  TagItemWidget.h  TextAnimator.h  Theme.h
src/: AudioItemWidget.cpp  AudioPlayer.cpp  Database.cpp  MainWindow.cpp  TagAssignmentDialog.cpp  TagChip.cpp  TagItemWidget.cpp  TextAnimator.cpp  Theme.cpp  main.cpp
ui/: AudioItemWidget.ui  MainWindow.ui  TagAssignmentDialog.ui  TagChip.ui  TagItemWidget.ui
